--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,30 @@
 spring.application.name=shoping-service
 server-port=8080
 
+
+#************* API en LOCAL apuntando a MySQL en OpenShift container *********************
+spring.datasource.url= jdbc:mysql://127.0.0.1:3306/db_shoping?serverTimezone=UTC
 #************* API en LOCAL apuntando a MySQL en docker container *********************
 #spring.datasource.url= jdbc:mysql://127.0.0.1:13306/db_shoping?serverTimezone=UTC
 #************* API en DOCKER CONTAINER apuntando a MySQL en docker container *********************
-spring.datasource.url= jdbc:mysql://mysql_container/db_shoping?serverTimezone=UTC
+#spring.datasource.url= jdbc:mysql://mysql_container/db_shoping?serverTimezone=UTC
 
 
-spring.datasource.username=root
-spring.datasource.password=secret
-
+#************* API en LOCAL apuntando a MySQL en OpenShift container *********************
+spring.datasource.username=sergio
+spring.datasource.password=sergiopass
+#************* API en LOCAL apuntando a MySQL en docker container *********************
 #************* API en DOCKER CONTAINER apuntando a MySQL en docker container *********************
+#spring.datasource.username=root
+#spring.datasource.password=secret
+
+#************* API en LOCAL apuntando a MySQL en OpenShift container *********************
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
+#************* API en LOCAL apuntando a MySQL en docker container *********************
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=create
 #************* API en DOCKER CONTAINER apuntando a MySQL en docker container *********************
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+
